--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "goosestudio/custom-multisite-path",
     "description": "This is a (MU-)plugin that fixes the paths for when you have WordPress in a subfolder and want MultiSite. Edit",
-    "type": "wordpress-plugin",
+    "type": "wordpress-muplugin",
     "license": "GPLv2.0",
     "authors": [
         {
